<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_btm_start"
        android:text="@string/start_game"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/moreHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_btm_start"
        android:text="@string/more_health"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

    <Button
        android:id="@+id/bottomExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_btm_start"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moreHealth" />

    <ImageView
        android:id="@+id/iconHealth"
        android:layout_width="65dp"
        android:layout_height="61dp"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/health" />

    <TextView
        android:id="@+id/healthPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_health"
        android:textStyle="bold"
        android:textSize="45sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/iconHealth"
        app:layout_constraintStart_toEndOf="@+id/iconHealth"
        app:layout_constraintTop_toTopOf="@+id/iconHealth" />


</androidx.constraintlayout.widget.ConstraintLayout>